<resources>
	<string name="app_name">eMonopoly</string>
	<string name="action_settings">Settings</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="okay">OK</string>
	<string name="cancel">Cancel</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="title_activity_agregar_usuarios">eMonopoly</string>

	<!-- AddPlayers activity -->
	<string name="add_players_button_add_player">Add player</string>
	<string name="add_players_fab_description">Start game</string>
	<string name="add_players_alert_dialog_card_repeated">That card already belongs to %1$s!</string>
	<string name="add_players_default_name">Name</string>
	<string name="add_players_remove_player">Remove player</string>
	<string name="title_activity_settings">Settings</string>

	<!-- Preference Titles -->
	<string name="settings_money_header">Money</string>
	<string name="sync_header">Sync</string>

	<!-- Messages Preferences -->
	<string name="reply_title">Default reply action</string>

	<!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="settings_default_pass_go_money">Default Pass Go reward ($)</string>
	<string name="settings_default_start_money">Default start money amount ($)</string>
	<string name="settings_allow_negative">Allow negative balance</string>
	<string name="settings_restore_defaults">Restore default values</string>
	<string name="settings_values_restored">Default values restored</string>
	<string name="main_start">Start</string>
	<string name="add_players_initial_money">Initial money</string>
	<string name="add_players_pass_go">Pass Go reward</string>
	<string name="add_players_few_players">Not enough players</string>
	<string name="add_players_empty_names">Players must have a name</string>
	<string name="pass_go">Pass go</string>
	<string name="game_money_transfered">%1$s gave %2$s \$%3$d</string>
	<string name="game_back_number">Erase last number</string>
	<string name="game_not_enough_money">%1$s doesn\'t have enough money</string>
	<string name="game_from">From</string>
	<string name="game_to">To</string>
	<string name="game_player_not_found">Player not found</string>
	<string name="game_same_from_to">From and To can\'t be the same</string>
	<string name="exit">Exit</string>
	<string name="game_exit_message">Are you sure you want to leave? Players data will lose</string>
	<string name="settings_banker_card">The banker has a card</string>
    <string name="banker_name">Bank</string>
	<string name="game_negative_balance_message">%1$s has negative balance</string>
	<string name="game_bankrupt_alert_title">Bankrupt?</string>
	<string name="game_bankrupt_alert_message">Does %1$s went bankrupt?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="game_bankrupt_message">%1$s has been declared bankrupt</string>
	<string name="game_player_has_lost">%1$s has lost</string>
	<string name="game_zero_division">Cannot divide by zero</string>
	<string name="share">Share</string>
	<string name="number_limits_exceeded">The number must be between %1$d and %2$d</string>
	<string name="result_exceeded_int_limits">The result is too big, try with smaller numbers</string>
	<string name="game_negative_transaction_error">The transaction can\'t be negative</string>
	<string name="game_leaderboard_format">%1$s: $ %2$s</string>
	<!-- /AddPlayers activity -->
</resources>