<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_money_header">

        <EditTextPreference
            app:key="start_money"
            app:title="@string/settings_default_start_money"
            app:defaultValue="1500"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="pass_go_money"
            app:title="@string/settings_default_pass_go_money"
            app:defaultValue="200"
            android:selectAllOnFocus="true"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="allow_negative"
            android:title="@string/settings_allow_negative"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:title="@string/settings_restore_defaults"
            android:key="restore_defaults" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

         <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>