<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".AddPlayers">

	<!--<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/Theme.EMonopoly.AppBarOverlay">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/add_players_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/Theme.EMonopoly.PopupOverlay" />

	</com.google.android.material.appbar.AppBarLayout>-->

	<!--<include
		layout="@layout/content_agregar_usuarios"
		android:visibility="gone" />-->

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="10dp"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:id="@+id/add_players_linear_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent">

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:layout_marginEnd="10dp">

				<EditText
					android:id="@+id/add_players_et_money"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/add_players_initial_money"
					android:inputType="number"
					android:importantForAutofill="no" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:layout_marginEnd="10dp">

				<EditText
					android:id="@+id/add_players_et_pass_go"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/add_players_pass_go"
					android:inputType="number"
					android:importantForAutofill="no" />

			</com.google.android.material.textfield.TextInputLayout>

			<ImageButton
				android:id="@+id/imageButton"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				app:srcCompat="@android:drawable/ic_menu_add"
				android:onClick="addPlayer"
				android:contentDescription="@string/add_players_button_add_player" />


		</LinearLayout>

		<TableLayout
			android:id="@+id/add_players_table_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/add_players_linear_layout"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="15dp">

		</TableLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/add_players_fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		android:contentDescription="@string/add_players_fab_description"
		app:srcCompat="?attr/actionModeCloseDrawable"
		android:rotation="180"
		android:onClick="askForCards"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>